Fix interested button on iphone display

--- a/src/pages/Home2.css
+++ b/src/pages/Home2.css
@@ -163,10 +163,10 @@
         font-size: 0.85em;
     }
     .interested-button {
-        top: 194%;
+        top: 190%;
     }
     .purple-cup {
-        top: 114%;
+        top: 112%;
         left: 35%;
         width: 35%;
     }
